--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AI Home Redesign with Gemini Flash 2.0 Image Generation</title>
+    <title>AI Home Redesign - Powered by Gemini Flash 2.0 (Image Generation) Experimental</title>
   </head>
   <body>
     <div id="root"></div>
