--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AI Home Redesign - Powered by Gemini Flash 2.0 (Image Generation) Experimental</title>
+    <!-- Open Graph / Social Media Meta Tags -->
+    <meta property="og:title" content="AI Home Redesign" />
+    <meta property="og:description" content="Transform your home with AI-powered redesign using Gemini Flash 2.0" />
+    <meta property="og:image" content="/logo.jpeg" />
+    <meta property="og:url" content="https://jonigl.github.io/ai-home-redesign" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="AI Home Redesign" />
   </head>
   <body>
     <div id="root"></div>
