[main] updating README.md

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Open Graph / Social Media Meta Tags -->
     <meta property="og:title" content="AI Home Redesign" />
     <meta property="og:description" content="Transform your home with AI-powered redesign using Gemini Flash 2.0" />
-    <meta property="og:image" content="https://jonigl.github.io/ai-home-redesign/logo.jpg" />
+    <meta property="og:image" content="https://jonigl.github.io/ai-home-redesign/house-emoji.svg" />
     <meta property="og:url" content="https://jonigl.github.io/ai-home-redesign/" />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="AI Home Redesign" />
